@@ -1,64 +1,59 @@
 package ru.yandex.practicum.telemetry.analyzer.processor;
 
-import org.apache.avro.specific.SpecificRecordBase;
+import lombok.extern.slf4j.Slf4j;
 import org.apache.kafka.clients.consumer.ConsumerRecords;
 import org.apache.kafka.clients.consumer.KafkaConsumer;
+import org.apache.kafka.common.errors.WakeupException;
 import org.springframework.stereotype.Component;
 import ru.yandex.practicum.telemetry.analyzer.config.AnalyzerKafkaProperties;
-import ru.yandex.practicum.telemetry.analyzer.config.KafkaClientsFactory;
-import ru.yandex.practicum.telemetry.analyzer.serialization.SpecificAvroDeserializer;
 import ru.yandex.practicum.telemetry.analyzer.service.ScenarioEngine;
 
 import java.time.Duration;
-import java.util.Collections;
+import java.util.List;
+import java.util.concurrent.atomic.AtomicBoolean;
 
+@Slf4j
 @Component
 public class SnapshotProcessor {
-    private final KafkaConsumer<String, byte[]> consumer;
-    private final AnalyzerKafkaProperties props;
-    private final SpecificAvroDeserializer deserializer = new SpecificAvroDeserializer();
-    private final ScenarioEngine scenarioEngine;
 
-    public SnapshotProcessor(KafkaClientsFactory factory,
-                             AnalyzerKafkaProperties props,
-                             ScenarioEngine scenarioEngine) {
-        this.consumer = factory.createSnapshotsConsumer();
+    private final KafkaConsumer<String, Object> consumer;
+    private final AnalyzerKafkaProperties props;
+    private final ScenarioEngine scenarioEngine;
+    private final AtomicBoolean running = new AtomicBoolean(true);
+
+    public SnapshotProcessor(
+            KafkaConsumer<String, Object> consumer,
+            AnalyzerKafkaProperties props,
+            ScenarioEngine scenarioEngine
+    ) {
+        this.consumer = consumer;
         this.props = props;
         this.scenarioEngine = scenarioEngine;
-
-        Runtime.getRuntime().addShutdownHook(new Thread(() -> {
-            try {
-                consumer.wakeup();
-                consumer.close();
-            } catch (Exception ignored) {
-            }
-        }));
+        Runtime.getRuntime().addShutdownHook(new Thread(this::shutdown));
     }
 
     public void start() {
-        consumer.subscribe(Collections.singletonList(props.topics().snapshots()));
-        Class<? extends SpecificRecordBase> snapshotClass = resolveSnapshotClass(props.snapshot().valueClass());
+        consumer.subscribe(List.of(props.getTopics().getSnapshots()));
+        try {
+            while (running.get()) {
+                ConsumerRecords<String, Object> records = consumer.poll(Duration.ofMillis(props.getPollTimeoutMs()));
+                if (records.isEmpty()) continue;
 
-        while (true) {
-            ConsumerRecords<String, byte[]> records = consumer.poll(Duration.ofMillis(props.consumers().snapshots().pollTimeoutMs()));
-            records.forEach(r -> {
-                SpecificRecordBase snapshot = deserializer.deserialize(r.value(), snapshotClass);
-                scenarioEngine.handleSnapshot(snapshot);
-            });
-            consumer.commitSync();
+                records.forEach(r -> scenarioEngine.handleSnapshot(r.value()));
+                consumer.commitSync();
+            }
+        } catch (WakeupException e) {
+            if (running.get()) throw e;
+        } finally {
+            try {
+                consumer.close();
+            } catch (Exception ignored) {
+            }
         }
     }
 
-    @SuppressWarnings("unchecked")
-    private Class<? extends SpecificRecordBase> resolveSnapshotClass(String fqcn) {
-        try {
-            Class<?> c = Class.forName(fqcn);
-            if (!SpecificRecordBase.class.isAssignableFrom(c)) {
-                throw new IllegalArgumentException("snapshot value-class must extend SpecificRecordBase");
-            }
-            return (Class<? extends SpecificRecordBase>) c;
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        }
+    public void shutdown() {
+        running.set(false);
+        consumer.wakeup();
     }
 }
